--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"> 
@@ -19,6 +20,12 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li>
+          <!-- Light/Dark Mode Icons -->
+          <div id="theme-icon" class="theme-toggle">
+            <i class="fas fa-sun"></i> <!-- Sun icon -->
+          </div>
+        </li>
       </ul>
     </nav>
 
@@ -94,7 +101,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p> Bachelor of Technology (Business Systems Development) (Hons)<br />Sept 2023 - Present</p>
+              <p> Bachelor of Technology(Hons)<br />Sept 2023 - Present</p>
             </div>
           </div>
           <div class="text-container">
